// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimelineListItem Should match snapshot, all handled-status items history, no link 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  PN_ROUTES_MESSAGE_DETAILS
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          fullScreenSwipeEnabled="undefined"
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents={
            [
              1,
            ]
          }
          sheetCornerRadius={-1}
          sheetElevation={24}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetInitialDetent={0}
          sheetLargestUndimmedDetent={-1}
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": undefined,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            collapsable={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                enabled={false}
                handlerTag={-1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        accessibilityLabel="Stato della notifica"
                        accessibilityRole="button"
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": undefined,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        onTouchEnd={[Function]}
                        testID="timeline_listitem_bottom_menu"
                      >
                        <View
                          accessibilityElementsHidden={true}
                          importantForAccessibility="no-hide-descendants"
                          style={
                            [
                              {
                                "marginHorizontal": -24,
                                "paddingHorizontal": 24,
                                "paddingVertical": 12,
                              },
                              {
                                "backgroundColor": undefined,
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "justifyContent": "space-between",
                                },
                                {
                                  "columnGap": 18,
                                },
                                {
                                  "transform": [
                                    {
                                      "scale": undefined,
                                    },
                                  ],
                                },
                              ]
                            }
                          >
                            <RNSVGSvgView
                              accessibilityElementsHidden={true}
                              accessibilityLabel=""
                              accessible={false}
                              align="xMidYMid"
                              bbHeight={36}
                              bbWidth={36}
                              color="#0B3EE3"
                              focusable={false}
                              height={36}
                              importantForAccessibility="no-hide-descendants"
                              meetOrSlice={0}
                              minX={0}
                              minY={0}
                              style={
                                [
                                  {
                                    "backgroundColor": "transparent",
                                    "borderWidth": 0,
                                  },
                                  {
                                    "flex": 0,
                                    "height": 36,
                                    "width": 36,
                                  },
                                ]
                              }
                              vbHeight={24}
                              vbWidth={24}
                              width={36}
                            >
                              <RNSVGGroup
                                fill={
                                  {
                                    "payload": 4278190080,
                                    "type": 0,
                                  }
                                }
                              >
                                <RNSVGPath
                                  clipRule={0}
                                  d="M3.5 1.50002v2.02943a11.99996 11.99996 0 0 1 17.3502.36667 11.99962 11.99962 0 0 1 3.0426 6.50368 11.99893 11.99893 0 0 1-1.2153 7.0765 11.99986 11.99986 0 0 1-5.038 5.116 12.00093 12.00093 0 0 1-7.0571 1.3237 12.0008 12.0008 0 0 1-6.54956-2.9424c-.413-.3667-.45055-.9988-.08387-1.4118.36668-.413.99873-.4505 1.41173-.0838a9.99994 9.99994 0 0 0 5.458 2.452 10.00032 10.00032 0 0 0 5.8809-1.1031 10 10 0 0 0 4.1983-4.2633 9.99951 9.99951 0 0 0 1.0128-5.8971 9.99999 9.99999 0 0 0-2.5355-5.41974 10.0002 10.0002 0 0 0-5.1759-3.00192 10.00016 10.00016 0 0 0-5.96336.49061 9.99978 9.99978 0 0 0-3.3774 2.26457H7c.55228 0 1 .44771 1 1 0 .55228-.44772 1-1 1H2.5a1 1 0 0 1-1-1v-4.5c0-.55229.44772-1 1-1s1 .44771 1 1ZM12 7c.5523 0 1 .44772 1 1v4.5858l2.7071 2.7071c.3905.3905.3905 1.0237 0 1.4142-.3905.3905-1.0237.3905-1.4142 0l-3-3A1.0001 1.0001 0 0 1 11 13V8c0-.55228.4477-1 1-1Z"
                                  fill={
                                    {
                                      "type": 2,
                                    }
                                  }
                                  fillRule={0}
                                  propList={
                                    [
                                      "fill",
                                      "fillRule",
                                    ]
                                  }
                                />
                              </RNSVGGroup>
                            </RNSVGSvgView>
                            <View
                              style={
                                {
                                  "flexGrow": 1,
                                  "flexShrink": 1,
                                }
                              }
                            >
                              <Text
                                allowFontScaling={true}
                                maxFontSizeMultiplier={1.5}
                                style={
                                  [
                                    {},
                                    {
                                      "color": "#0B3EE3",
                                      "fontFamily": "Titillio",
                                      "fontSize": 16,
                                      "fontStyle": "normal",
                                      "fontWeight": "600",
                                      "lineHeight": 20,
                                    },
                                  ]
                                }
                              >
                                Stato della notifica
                              </Text>
                            </View>
                          </View>
                        </View>
                      </View>
                      <Modal
                        accessible={false}
                        backdropComponent={[Function]}
                        backgroundStyle={
                          {
                            "backgroundColor": "#FFFFFF",
                          }
                        }
                        enableDismissOnClose={true}
                        enableDynamicSizing={false}
                        footerComponent={[Function]}
                        handleComponent={[Function]}
                        importantForAccessibility="yes"
                        maxDynamicContentSize={1334}
                        onDismiss={[Function]}
                        snapPoints={
                          [
                            992,
                          ]
                        }
                        style={
                          {
                            "borderCurve": "continuous",
                            "borderTopLeftRadius": 24,
                            "borderTopRightRadius": 24,
                            "overflow": "hidden",
                          }
                        }
                      >
                        <RCTScrollView
                          overScrollMode="never"
                          style={
                            {
                              "paddingHorizontal": 24,
                            }
                          }
                        >
                          <View>
                            <View>
                              <View>
                                Mock Timeline 0
                              </View>
                              <View>
                                28
                              </View>
                              <View>
                                Pagata
                              </View>
                              <View>
                                nov
                              </View>
                              <View>
                                default
                              </View>
                              <View>
                                19:55
                              </View>
                            </View>
                            <View>
                              <View>
                                Mock Timeline 1
                              </View>
                              <View>
                                25
                              </View>
                              <View>
                                Consegnata
                              </View>
                              <View>
                                ott
                              </View>
                              <View>
                                default
                              </View>
                              <View>
                                17:50
                              </View>
                            </View>
                            <View>
                              <View>
                                Mock Timeline 2
                              </View>
                              <View>
                                23
                              </View>
                              <View>
                                Invio in corso
                              </View>
                              <View>
                                set
                              </View>
                              <View>
                                default
                              </View>
                              <View>
                                15:45
                              </View>
                            </View>
                            <View>
                              <View>
                                Mock Timeline 3
                              </View>
                              <View>
                                20
                              </View>
                              <View>
                                REFUSED
                              </View>
                              <View>
                                ago
                              </View>
                              <View>
                                default
                              </View>
                              <View>
                                13:40
                              </View>
                            </View>
                            <View>
                              <View>
                                Mock Timeline 4
                              </View>
                              <View>
                                18
                              </View>
                              <View>
                                Depositata
                              </View>
                              <View>
                                lug
                              </View>
                              <View>
                                default
                              </View>
                              <View>
                                11:35
                              </View>
                            </View>
                            <View>
                              <View>
                                Mock Timeline 5
                              </View>
                              <View>
                                13
                              </View>
                              <View>
                                IN VALIDATION
                              </View>
                              <View>
                                giu
                              </View>
                              <View>
                                default
                              </View>
                              <View>
                                09:30
                              </View>
                            </View>
                            <View>
                              <View>
                                Mock Timeline 6
                              </View>
                              <View>
                                10
                              </View>
                              <View>
                                Annullata
                              </View>
                              <View>
                                mag
                              </View>
                              <View>
                                cancelled
                              </View>
                              <View>
                                07:25
                              </View>
                            </View>
                            <View>
                              <View>
                                Mock Timeline 7
                              </View>
                              <View>
                                07
                              </View>
                              <View>
                                Destinatario irreperibile
                              </View>
                              <View>
                                apr
                              </View>
                              <View>
                                unreachable
                              </View>
                              <View>
                                05:20
                              </View>
                            </View>
                            <View>
                              <View>
                                Mock Timeline 8
                              </View>
                              <View>
                                03
                              </View>
                              <View>
                                Perfezionata per decorrenza termini
                              </View>
                              <View>
                                mar
                              </View>
                              <View>
                                effective
                              </View>
                              <View>
                                03:15
                              </View>
                            </View>
                            <View>
                              <View>
                                Mock Timeline 9
                              </View>
                              <View>
                                01
                              </View>
                              <View>
                                Avvenuto accesso
                              </View>
                              <View>
                                feb
                              </View>
                              <View>
                                viewed
                              </View>
                              <View>
                                01:10
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "height": 48,
                                }
                              }
                            />
                            <View
                              style={
                                {
                                  "height": 48,
                                }
                              }
                            />
                          </View>
                        </RCTScrollView>
                      </Modal>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`TimelineListItem Should match snapshot, all handled-status items history, with link 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  PN_ROUTES_MESSAGE_DETAILS
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          fullScreenSwipeEnabled="undefined"
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents={
            [
              1,
            ]
          }
          sheetCornerRadius={-1}
          sheetElevation={24}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetInitialDetent={0}
          sheetLargestUndimmedDetent={-1}
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": undefined,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            collapsable={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                enabled={false}
                handlerTag={-1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        accessibilityLabel="Stato della notifica"
                        accessibilityRole="button"
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": undefined,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        onTouchEnd={[Function]}
                        testID="timeline_listitem_bottom_menu"
                      >
                        <View
                          accessibilityElementsHidden={true}
                          importantForAccessibility="no-hide-descendants"
                          style={
                            [
                              {
                                "marginHorizontal": -24,
                                "paddingHorizontal": 24,
                                "paddingVertical": 12,
                              },
                              {
                                "backgroundColor": undefined,
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "justifyContent": "space-between",
                                },
                                {
                                  "columnGap": 18,
                                },
                                {
                                  "transform": [
                                    {
                                      "scale": undefined,
                                    },
                                  ],
                                },
                              ]
                            }
                          >
                            <RNSVGSvgView
                              accessibilityElementsHidden={true}
                              accessibilityLabel=""
                              accessible={false}
                              align="xMidYMid"
                              bbHeight={36}
                              bbWidth={36}
                              color="#0B3EE3"
                              focusable={false}
                              height={36}
                              importantForAccessibility="no-hide-descendants"
                              meetOrSlice={0}
                              minX={0}
                              minY={0}
                              style={
                                [
                                  {
                                    "backgroundColor": "transparent",
                                    "borderWidth": 0,
                                  },
                                  {
                                    "flex": 0,
                                    "height": 36,
                                    "width": 36,
                                  },
                                ]
                              }
                              vbHeight={24}
                              vbWidth={24}
                              width={36}
                            >
                              <RNSVGGroup
                                fill={
                                  {
                                    "payload": 4278190080,
                                    "type": 0,
                                  }
                                }
                              >
                                <RNSVGPath
                                  clipRule={0}
                                  d="M3.5 1.50002v2.02943a11.99996 11.99996 0 0 1 17.3502.36667 11.99962 11.99962 0 0 1 3.0426 6.50368 11.99893 11.99893 0 0 1-1.2153 7.0765 11.99986 11.99986 0 0 1-5.038 5.116 12.00093 12.00093 0 0 1-7.0571 1.3237 12.0008 12.0008 0 0 1-6.54956-2.9424c-.413-.3667-.45055-.9988-.08387-1.4118.36668-.413.99873-.4505 1.41173-.0838a9.99994 9.99994 0 0 0 5.458 2.452 10.00032 10.00032 0 0 0 5.8809-1.1031 10 10 0 0 0 4.1983-4.2633 9.99951 9.99951 0 0 0 1.0128-5.8971 9.99999 9.99999 0 0 0-2.5355-5.41974 10.0002 10.0002 0 0 0-5.1759-3.00192 10.00016 10.00016 0 0 0-5.96336.49061 9.99978 9.99978 0 0 0-3.3774 2.26457H7c.55228 0 1 .44771 1 1 0 .55228-.44772 1-1 1H2.5a1 1 0 0 1-1-1v-4.5c0-.55229.44772-1 1-1s1 .44771 1 1ZM12 7c.5523 0 1 .44772 1 1v4.5858l2.7071 2.7071c.3905.3905.3905 1.0237 0 1.4142-.3905.3905-1.0237.3905-1.4142 0l-3-3A1.0001 1.0001 0 0 1 11 13V8c0-.55228.4477-1 1-1Z"
                                  fill={
                                    {
                                      "type": 2,
                                    }
                                  }
                                  fillRule={0}
                                  propList={
                                    [
                                      "fill",
                                      "fillRule",
                                    ]
                                  }
                                />
                              </RNSVGGroup>
                            </RNSVGSvgView>
                            <View
                              style={
                                {
                                  "flexGrow": 1,
                                  "flexShrink": 1,
                                }
                              }
                            >
                              <Text
                                allowFontScaling={true}
                                maxFontSizeMultiplier={1.5}
                                style={
                                  [
                                    {},
                                    {
                                      "color": "#0B3EE3",
                                      "fontFamily": "Titillio",
                                      "fontSize": 16,
                                      "fontStyle": "normal",
                                      "fontWeight": "600",
                                      "lineHeight": 20,
                                    },
                                  ]
                                }
                              >
                                Stato della notifica
                              </Text>
                            </View>
                          </View>
                        </View>
                      </View>
                      <Modal
                        accessible={false}
                        backdropComponent={[Function]}
                        backgroundStyle={
                          {
                            "backgroundColor": "#FFFFFF",
                          }
                        }
                        enableDismissOnClose={true}
                        enableDynamicSizing={false}
                        footerComponent={[Function]}
                        handleComponent={[Function]}
                        importantForAccessibility="yes"
                        maxDynamicContentSize={1334}
                        onDismiss={[Function]}
                        snapPoints={
                          [
                            992,
                          ]
                        }
                        style={
                          {
                            "borderCurve": "continuous",
                            "borderTopLeftRadius": 24,
                            "borderTopRightRadius": 24,
                            "overflow": "hidden",
                          }
                        }
                      >
                        <RCTScrollView
                          overScrollMode="never"
                          style={
                            {
                              "paddingHorizontal": 24,
                            }
                          }
                        >
                          <View>
                            <View>
                              <View>
                                Mock Timeline 0
                              </View>
                              <View>
                                28
                              </View>
                              <View>
                                Pagata
                              </View>
                              <View>
                                nov
                              </View>
                              <View>
                                default
                              </View>
                              <View>
                                19:55
                              </View>
                            </View>
                            <View>
                              <View>
                                Mock Timeline 1
                              </View>
                              <View>
                                25
                              </View>
                              <View>
                                Consegnata
                              </View>
                              <View>
                                ott
                              </View>
                              <View>
                                default
                              </View>
                              <View>
                                17:50
                              </View>
                            </View>
                            <View>
                              <View>
                                Mock Timeline 2
                              </View>
                              <View>
                                23
                              </View>
                              <View>
                                Invio in corso
                              </View>
                              <View>
                                set
                              </View>
                              <View>
                                default
                              </View>
                              <View>
                                15:45
                              </View>
                            </View>
                            <View>
                              <View>
                                Mock Timeline 3
                              </View>
                              <View>
                                20
                              </View>
                              <View>
                                REFUSED
                              </View>
                              <View>
                                ago
                              </View>
                              <View>
                                default
                              </View>
                              <View>
                                13:40
                              </View>
                            </View>
                            <View>
                              <View>
                                Mock Timeline 4
                              </View>
                              <View>
                                18
                              </View>
                              <View>
                                Depositata
                              </View>
                              <View>
                                lug
                              </View>
                              <View>
                                default
                              </View>
                              <View>
                                11:35
                              </View>
                            </View>
                            <View>
                              <View>
                                Mock Timeline 5
                              </View>
                              <View>
                                13
                              </View>
                              <View>
                                IN VALIDATION
                              </View>
                              <View>
                                giu
                              </View>
                              <View>
                                default
                              </View>
                              <View>
                                09:30
                              </View>
                            </View>
                            <View>
                              <View>
                                Mock Timeline 6
                              </View>
                              <View>
                                10
                              </View>
                              <View>
                                Annullata
                              </View>
                              <View>
                                mag
                              </View>
                              <View>
                                cancelled
                              </View>
                              <View>
                                07:25
                              </View>
                            </View>
                            <View>
                              <View>
                                Mock Timeline 7
                              </View>
                              <View>
                                07
                              </View>
                              <View>
                                Destinatario irreperibile
                              </View>
                              <View>
                                apr
                              </View>
                              <View>
                                unreachable
                              </View>
                              <View>
                                05:20
                              </View>
                            </View>
                            <View>
                              <View>
                                Mock Timeline 8
                              </View>
                              <View>
                                03
                              </View>
                              <View>
                                Perfezionata per decorrenza termini
                              </View>
                              <View>
                                mar
                              </View>
                              <View>
                                effective
                              </View>
                              <View>
                                03:15
                              </View>
                            </View>
                            <View>
                              <View>
                                Mock Timeline 9
                              </View>
                              <View>
                                01
                              </View>
                              <View>
                                Avvenuto accesso
                              </View>
                              <View>
                                feb
                              </View>
                              <View>
                                viewed
                              </View>
                              <View>
                                01:10
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "height": 48,
                                }
                              }
                            />
                            <View
                              style={
                                {
                                  "height": 48,
                                }
                              }
                            />
                          </View>
                        </RCTScrollView>
                      </Modal>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`TimelineListItem Should match snapshot, no history, no link 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  PN_ROUTES_MESSAGE_DETAILS
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          fullScreenSwipeEnabled="undefined"
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents={
            [
              1,
            ]
          }
          sheetCornerRadius={-1}
          sheetElevation={24}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetInitialDetent={0}
          sheetLargestUndimmedDetent={-1}
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": undefined,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            collapsable={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                enabled={false}
                handlerTag={-1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        accessibilityLabel="Stato della notifica"
                        accessibilityRole="button"
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": undefined,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        onTouchEnd={[Function]}
                        testID="timeline_listitem_bottom_menu"
                      >
                        <View
                          accessibilityElementsHidden={true}
                          importantForAccessibility="no-hide-descendants"
                          style={
                            [
                              {
                                "marginHorizontal": -24,
                                "paddingHorizontal": 24,
                                "paddingVertical": 12,
                              },
                              {
                                "backgroundColor": undefined,
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "justifyContent": "space-between",
                                },
                                {
                                  "columnGap": 18,
                                },
                                {
                                  "transform": [
                                    {
                                      "scale": undefined,
                                    },
                                  ],
                                },
                              ]
                            }
                          >
                            <RNSVGSvgView
                              accessibilityElementsHidden={true}
                              accessibilityLabel=""
                              accessible={false}
                              align="xMidYMid"
                              bbHeight={36}
                              bbWidth={36}
                              color="#0B3EE3"
                              focusable={false}
                              height={36}
                              importantForAccessibility="no-hide-descendants"
                              meetOrSlice={0}
                              minX={0}
                              minY={0}
                              style={
                                [
                                  {
                                    "backgroundColor": "transparent",
                                    "borderWidth": 0,
                                  },
                                  {
                                    "flex": 0,
                                    "height": 36,
                                    "width": 36,
                                  },
                                ]
                              }
                              vbHeight={24}
                              vbWidth={24}
                              width={36}
                            >
                              <RNSVGGroup
                                fill={
                                  {
                                    "payload": 4278190080,
                                    "type": 0,
                                  }
                                }
                              >
                                <RNSVGPath
                                  clipRule={0}
                                  d="M3.5 1.50002v2.02943a11.99996 11.99996 0 0 1 17.3502.36667 11.99962 11.99962 0 0 1 3.0426 6.50368 11.99893 11.99893 0 0 1-1.2153 7.0765 11.99986 11.99986 0 0 1-5.038 5.116 12.00093 12.00093 0 0 1-7.0571 1.3237 12.0008 12.0008 0 0 1-6.54956-2.9424c-.413-.3667-.45055-.9988-.08387-1.4118.36668-.413.99873-.4505 1.41173-.0838a9.99994 9.99994 0 0 0 5.458 2.452 10.00032 10.00032 0 0 0 5.8809-1.1031 10 10 0 0 0 4.1983-4.2633 9.99951 9.99951 0 0 0 1.0128-5.8971 9.99999 9.99999 0 0 0-2.5355-5.41974 10.0002 10.0002 0 0 0-5.1759-3.00192 10.00016 10.00016 0 0 0-5.96336.49061 9.99978 9.99978 0 0 0-3.3774 2.26457H7c.55228 0 1 .44771 1 1 0 .55228-.44772 1-1 1H2.5a1 1 0 0 1-1-1v-4.5c0-.55229.44772-1 1-1s1 .44771 1 1ZM12 7c.5523 0 1 .44772 1 1v4.5858l2.7071 2.7071c.3905.3905.3905 1.0237 0 1.4142-.3905.3905-1.0237.3905-1.4142 0l-3-3A1.0001 1.0001 0 0 1 11 13V8c0-.55228.4477-1 1-1Z"
                                  fill={
                                    {
                                      "type": 2,
                                    }
                                  }
                                  fillRule={0}
                                  propList={
                                    [
                                      "fill",
                                      "fillRule",
                                    ]
                                  }
                                />
                              </RNSVGGroup>
                            </RNSVGSvgView>
                            <View
                              style={
                                {
                                  "flexGrow": 1,
                                  "flexShrink": 1,
                                }
                              }
                            >
                              <Text
                                allowFontScaling={true}
                                maxFontSizeMultiplier={1.5}
                                style={
                                  [
                                    {},
                                    {
                                      "color": "#0B3EE3",
                                      "fontFamily": "Titillio",
                                      "fontSize": 16,
                                      "fontStyle": "normal",
                                      "fontWeight": "600",
                                      "lineHeight": 20,
                                    },
                                  ]
                                }
                              >
                                Stato della notifica
                              </Text>
                            </View>
                          </View>
                        </View>
                      </View>
                      <Modal
                        accessible={false}
                        backdropComponent={[Function]}
                        backgroundStyle={
                          {
                            "backgroundColor": "#FFFFFF",
                          }
                        }
                        enableDismissOnClose={true}
                        enableDynamicSizing={false}
                        footerComponent={[Function]}
                        handleComponent={[Function]}
                        importantForAccessibility="yes"
                        maxDynamicContentSize={1334}
                        onDismiss={[Function]}
                        snapPoints={
                          [
                            292,
                          ]
                        }
                        style={
                          {
                            "borderCurve": "continuous",
                            "borderTopLeftRadius": 24,
                            "borderTopRightRadius": 24,
                            "overflow": "hidden",
                          }
                        }
                      >
                        <RCTScrollView
                          overScrollMode="never"
                          style={
                            {
                              "paddingHorizontal": 24,
                            }
                          }
                        >
                          <View>
                            <View
                              style={
                                {
                                  "height": 48,
                                }
                              }
                            />
                            <View
                              style={
                                {
                                  "height": 48,
                                }
                              }
                            />
                          </View>
                        </RCTScrollView>
                      </Modal>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`TimelineListItem Should match snapshot, no history, with link 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  PN_ROUTES_MESSAGE_DETAILS
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          fullScreenSwipeEnabled="undefined"
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents={
            [
              1,
            ]
          }
          sheetCornerRadius={-1}
          sheetElevation={24}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetInitialDetent={0}
          sheetLargestUndimmedDetent={-1}
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": undefined,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            collapsable={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                enabled={false}
                handlerTag={-1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        accessibilityLabel="Stato della notifica"
                        accessibilityRole="button"
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": undefined,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        onTouchEnd={[Function]}
                        testID="timeline_listitem_bottom_menu"
                      >
                        <View
                          accessibilityElementsHidden={true}
                          importantForAccessibility="no-hide-descendants"
                          style={
                            [
                              {
                                "marginHorizontal": -24,
                                "paddingHorizontal": 24,
                                "paddingVertical": 12,
                              },
                              {
                                "backgroundColor": undefined,
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "justifyContent": "space-between",
                                },
                                {
                                  "columnGap": 18,
                                },
                                {
                                  "transform": [
                                    {
                                      "scale": undefined,
                                    },
                                  ],
                                },
                              ]
                            }
                          >
                            <RNSVGSvgView
                              accessibilityElementsHidden={true}
                              accessibilityLabel=""
                              accessible={false}
                              align="xMidYMid"
                              bbHeight={36}
                              bbWidth={36}
                              color="#0B3EE3"
                              focusable={false}
                              height={36}
                              importantForAccessibility="no-hide-descendants"
                              meetOrSlice={0}
                              minX={0}
                              minY={0}
                              style={
                                [
                                  {
                                    "backgroundColor": "transparent",
                                    "borderWidth": 0,
                                  },
                                  {
                                    "flex": 0,
                                    "height": 36,
                                    "width": 36,
                                  },
                                ]
                              }
                              vbHeight={24}
                              vbWidth={24}
                              width={36}
                            >
                              <RNSVGGroup
                                fill={
                                  {
                                    "payload": 4278190080,
                                    "type": 0,
                                  }
                                }
                              >
                                <RNSVGPath
                                  clipRule={0}
                                  d="M3.5 1.50002v2.02943a11.99996 11.99996 0 0 1 17.3502.36667 11.99962 11.99962 0 0 1 3.0426 6.50368 11.99893 11.99893 0 0 1-1.2153 7.0765 11.99986 11.99986 0 0 1-5.038 5.116 12.00093 12.00093 0 0 1-7.0571 1.3237 12.0008 12.0008 0 0 1-6.54956-2.9424c-.413-.3667-.45055-.9988-.08387-1.4118.36668-.413.99873-.4505 1.41173-.0838a9.99994 9.99994 0 0 0 5.458 2.452 10.00032 10.00032 0 0 0 5.8809-1.1031 10 10 0 0 0 4.1983-4.2633 9.99951 9.99951 0 0 0 1.0128-5.8971 9.99999 9.99999 0 0 0-2.5355-5.41974 10.0002 10.0002 0 0 0-5.1759-3.00192 10.00016 10.00016 0 0 0-5.96336.49061 9.99978 9.99978 0 0 0-3.3774 2.26457H7c.55228 0 1 .44771 1 1 0 .55228-.44772 1-1 1H2.5a1 1 0 0 1-1-1v-4.5c0-.55229.44772-1 1-1s1 .44771 1 1ZM12 7c.5523 0 1 .44772 1 1v4.5858l2.7071 2.7071c.3905.3905.3905 1.0237 0 1.4142-.3905.3905-1.0237.3905-1.4142 0l-3-3A1.0001 1.0001 0 0 1 11 13V8c0-.55228.4477-1 1-1Z"
                                  fill={
                                    {
                                      "type": 2,
                                    }
                                  }
                                  fillRule={0}
                                  propList={
                                    [
                                      "fill",
                                      "fillRule",
                                    ]
                                  }
                                />
                              </RNSVGGroup>
                            </RNSVGSvgView>
                            <View
                              style={
                                {
                                  "flexGrow": 1,
                                  "flexShrink": 1,
                                }
                              }
                            >
                              <Text
                                allowFontScaling={true}
                                maxFontSizeMultiplier={1.5}
                                style={
                                  [
                                    {},
                                    {
                                      "color": "#0B3EE3",
                                      "fontFamily": "Titillio",
                                      "fontSize": 16,
                                      "fontStyle": "normal",
                                      "fontWeight": "600",
                                      "lineHeight": 20,
                                    },
                                  ]
                                }
                              >
                                Stato della notifica
                              </Text>
                            </View>
                          </View>
                        </View>
                      </View>
                      <Modal
                        accessible={false}
                        backdropComponent={[Function]}
                        backgroundStyle={
                          {
                            "backgroundColor": "#FFFFFF",
                          }
                        }
                        enableDismissOnClose={true}
                        enableDynamicSizing={false}
                        footerComponent={[Function]}
                        handleComponent={[Function]}
                        importantForAccessibility="yes"
                        maxDynamicContentSize={1334}
                        onDismiss={[Function]}
                        snapPoints={
                          [
                            292,
                          ]
                        }
                        style={
                          {
                            "borderCurve": "continuous",
                            "borderTopLeftRadius": 24,
                            "borderTopRightRadius": 24,
                            "overflow": "hidden",
                          }
                        }
                      >
                        <RCTScrollView
                          overScrollMode="never"
                          style={
                            {
                              "paddingHorizontal": 24,
                            }
                          }
                        >
                          <View>
                            <View
                              style={
                                {
                                  "height": 48,
                                }
                              }
                            />
                            <View
                              style={
                                {
                                  "height": 48,
                                }
                              }
                            />
                          </View>
                        </RCTScrollView>
                      </Modal>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
